--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "[(68.0, 74.22727272727273, 80.0)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1262,24 +1262,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017-03-20\n",
-      "2017-03-30\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>rainfall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>21.33310</td>\n",
+       "      <td>-157.80250</td>\n",
+       "      <td>152.4</td>\n",
+       "      <td>1.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519281</td>\n",
+       "      <td>WAIHEE 837.5, HI US</td>\n",
+       "      <td>21.45167</td>\n",
+       "      <td>-157.84889</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>1.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>KANEOHE 838.1, HI US</td>\n",
+       "      <td>21.42340</td>\n",
+       "      <td>-157.80150</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>0.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519523</td>\n",
+       "      <td>WAIMANALO EXPERIMENTAL FARM, HI US</td>\n",
+       "      <td>21.33556</td>\n",
+       "      <td>-157.71139</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>KUALOA RANCH HEADQUARTERS 886.9, HI US</td>\n",
+       "      <td>21.52130</td>\n",
+       "      <td>-157.83740</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>21.27160</td>\n",
+       "      <td>-157.81680</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>PEARL CITY, HI US</td>\n",
+       "      <td>21.39340</td>\n",
+       "      <td>-157.97510</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station                                    name  latitude  longitude  \\\n",
+       "0  USC00516128            MANOA LYON ARBO 785.2, HI US  21.33310 -157.80250   \n",
+       "1  USC00519281                     WAIHEE 837.5, HI US  21.45167 -157.84889   \n",
+       "2  USC00513117                    KANEOHE 838.1, HI US  21.42340 -157.80150   \n",
+       "3  USC00519523      WAIMANALO EXPERIMENTAL FARM, HI US  21.33556 -157.71139   \n",
+       "4  USC00514830  KUALOA RANCH HEADQUARTERS 886.9, HI US  21.52130 -157.83740   \n",
+       "5  USC00519397                    WAIKIKI 717.2, HI US  21.27160 -157.81680   \n",
+       "6  USC00517948                       PEARL CITY, HI US  21.39340 -157.97510   \n",
+       "\n",
+       "   elevation  rainfall  \n",
+       "0      152.4      1.43  \n",
+       "1       32.9      1.22  \n",
+       "2       14.6      0.84  \n",
+       "3       19.5      0.60  \n",
+       "4        7.0      0.21  \n",
+       "5        3.0      0.02  \n",
+       "6       11.9       NaN  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# set the trip variables of arrive and leave for prior year\n",
-    "lst_year_arrive = trip_arrive - last_year\n",
-    "lst_year_leave = trip_leave - last_year\n",
-    "print(lst_year_arrive)\n",
-    "print(lst_year_leave)"
+    "sel = [Station.station,\n",
+    "       Station.name,\n",
+    "       Station.latitude,\n",
+    "       Station.longitude,\n",
+    "       Station.elevation,\n",
+    "       func.sum(Measurement.prcp)]\n",
+    "trip_rainfall = session.query(*sel).\\\n",
+    "                filter(Measurement.station == Station.station).\\\n",
+    "                filter(Measurement.date>='2017-03-20', Measurement.date<='2017-03-30').\\\n",
+    "                group_by(Measurement.station).\\\n",
+    "                order_by(func.sum(Measurement.prcp).desc()).all()\n",
+    "\n",
+    "trip_rainfall_df = pd.DataFrame(trip_rainfall, columns=['station', 'name', 'latitude', 'longitude', 'elevation', 'rainfall'])\n",
+    "trip_rainfall_df"
    ]
   },
   {
@@ -1287,13 +1409,7 @@
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# query to pull the rain fall from last year matching this years trip\n",
-    "vacation_data = session.query(Measurement.station, Measurement.date, Measurement.prcp, Measurement.tobs).\\\n",
-    "    filter(Measurement.date >= lst_year_arrive).\\\n",
-    "    filter(Measurement.date <= lst_year_leave).\\\n",
-    "    order_by(Measurement.station).all()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1378,14 +1494,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "\n",
-    "# load the query results into a dataframe and pivot on station\n",
-    "vacation_data_df=pd.DataFrame(vacation_data)\n",
-    "\n",
-    "rain_per_station = pd.pivot_table(vacation_data_df,index=['station'],values=['prcp'], aggfunc=sum)\n",
-    "rain_per_station"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
