--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -278,6 +278,7 @@
     "plt.xlabel('Date')\n",
     "plt.ylabel(\"Precipitation\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Output/PrecipAnalysis.png\")\n",
     "plt.show()\n",
     "\n",
     "\n"
@@ -1110,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1134,6 +1135,7 @@
     "plt.xlabel(\"Recorded Temperature\")\n",
     "plt.ylabel(\"Number of Recorded Observations\")\n",
     "plt.title(\"Station Analysis (8/24/16 to 8/23/17) for Station USC00519281\")\n",
+    "plt.savefig(\"Output/StationAnalysis.png\")\n",
     "plt.show()"
    ]
   },
@@ -1413,87 +1415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prcp</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>station</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>USC00513117</th>\n",
-       "      <td>0.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USC00514830</th>\n",
-       "      <td>0.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USC00516128</th>\n",
-       "      <td>1.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USC00517948</th>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USC00519281</th>\n",
-       "      <td>1.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USC00519397</th>\n",
-       "      <td>0.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USC00519523</th>\n",
-       "      <td>0.60</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             prcp\n",
-       "station          \n",
-       "USC00513117  0.84\n",
-       "USC00514830  0.21\n",
-       "USC00516128  1.43\n",
-       "USC00517948  0.00\n",
-       "USC00519281  1.22\n",
-       "USC00519397  0.02\n",
-       "USC00519523  0.60"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
